# EthStructures

./: .gitignore  .gitmodules  BlockHeader.json  CMakeLists.txt  HowTo_submodule.txt  README.md  git_config.txt
ByteSet/: .gitignore  README.md  json_tryout.json
ByteSet/app/: CMakeLists.txt  main.cpp
ByteSet/cmake/: CMakeLists.txt  doxygen.cmake  ethash.cmake  givaro.cmake  gmp.cmake  googletest.cmake  openssl.cmake
ByteSet/examples/: trie.txt
ByteSet/include/ByteSet/: ByteSet.h  ByteSet.tpp  ByteSetFormat.h  IComposite.h  RLPByteSet.tpp  Tools.h  TrieNode.h  TrieNode.tpp  VectorNode.h
ByteSet/src/: ByteSetFormat.cpp  CMakeLists.txt  IComposite.cpp  Tools.cpp  VectorNode.cpp
ByteSet/tests/: CMakeLists.txt
ByteSet/tests/unit_tests/: CMakeLists.txt  Test_Alignment.cpp  Test_Hashing.cpp  Test_RLPserialize.cpp  Test_TrieNode.cpp
ByteSet/tests/unit_tests/constructors/: CMakeLists.txt  Test_Constructors_parameters.h  Test_int_Constructors.cpp  Test_ptr_Constructors.cpp  Test_str_Constructors.cpp
Ethereum_Blocks/: EL_eth_versions.txt  Forks_summary.ods  main  trie.txt
app/: CMakeLists.txt  main.cpp
cmake/: CMakeLists.txt  Doxyfile.in  curl.cmake  doxygen.cmake  ethash.cmake  givaro.cmake  gmp.cmake  googletest.cmake  nlohmannjson.cmake  openssl.cmake
examples/: EL_Receipt_versions.txt  EL_Transaction_versions.txt  EL_block_schema.json  EL_block_versions.txt  Forks_summary.ods  main.cpp
include/ByteSet/: ByteSet.h  ByteSet.tpp  ByteSetComposite.h  ByteSetFormat.h
include/EthStructures/: EthComposite.h  EthComposite.tpp
src/: ByteSetComposite.h  ByteSetComposite.tpp  ByteSetFormat.cpp  CMakeLists.txt  EthComposite.cpp  EthComposite.h  EthComposite.tpp  System.h  Tools.cpp  Tools.h  main.cpp  trie.cpp  trie.h
src/data/: ByteSet.h  ByteSet.tpp  ByteSetComposite.h  ByteSetComposite.tpp  ByteSetFormat.cpp  ByteSetFormat.h  CMakeLists.txt  EthComposite.h  EthComposite.tpp  Tools.cpp  Tools.h  trie.cpp  trie.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  EthComposite.cpp  RLPserialize.cpp  Test_EthComposite.cpp  hashing.cpp
tests/unit_tests/constructors/: CMakeLists.txt  Constructors_parameters.h  int_Constructors.cpp  ptr_Constructors.cpp  str_Constructors.cpp
